--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "iflabs",
-  "main": "expo-router/entry",
   "version": "1.0.0",
+  "main": "./App.tsx",
+  
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
+    "android": "cross-env DARK_MODE=media expo start --android",
+    "ios": "cross-env DARK_MODE=media expo start --ios",
+    "web": "cross-env DARK_MODE=media expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
   },
@@ -15,9 +16,24 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/html-elements": "^0.4.2",
     "@expo/vector-icons": "^14.0.2",
+    "@gluestack-ui/button": "^1.0.12",
+    "@gluestack-ui/icon": "^0.1.25",
+    "@gluestack-ui/image": "^0.1.15",
+    "@gluestack-ui/input": "^0.1.36",
+    "@gluestack-ui/nativewind-utils": "^1.0.26",
+    "@gluestack-ui/overlay": "^0.1.20",
+    "@gluestack-ui/toast": "^1.0.9",
+    "@hookform/resolvers": "^4.1.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
+    "@tanstack/react-query": "^5.66.9",
+    "axios": "^1.7.9",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~52.0.37",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
@@ -30,23 +46,31 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-native": "0.76.7",
+    "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "tailwindcss": "^3.4.17",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
+    "cross-env": "^7.0.3",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.4",
+    "jscodeshift": "^0.15.2",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
